--- a/_optimized_gulp_sass_jade/app/.htaccess
+++ b/_optimized_gulp_sass_jade/app/.htaccess
@@ -1,4 +1,4 @@
-<ifModule mod_expires.c>
+  <ifModule mod_expires.c>
 
 # Add correct content-type for fonts
 AddType application/vnd.ms-fontobject .eot
@@ -11,7 +11,7 @@ AddType image/svg+xml .svg
 AddOutputFilterByType DEFLATE application/x-font-ttf application/x-font-opentype image/svg+xml
 
 ExpiresActive On
-ExpiresDefault "access plus 5 seconds"
+ExpiresDefault "access plus 5 sec"
 
 # Cache Images
 ExpiresByType image/x-icon "access plus 2592000 seconds"
@@ -36,4 +36,4 @@ ExpiresByType application/x-javascript "access plus 2592000 seconds"
 ExpiresByType text/html "access plus 600 seconds"
 ExpiresByType application/xhtml+xml "access plus 600 seconds"
 
-</ifModule>
+  </ifModule>
